<resources>
    <string name="app_name">Cardio Helper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Title</string>
    <string name="nav_header_subtitle">Subtitle</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_graph">Graph</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="mapbox_token">pk.eyJ1IjoiamVnc3UiLCJhIjoiY2tmdjNsZjgxMDczeDJxcDd6amttODRpMSJ9.KD8JSjVgHZxBpMTmHj7Uxg</string>

    <string name="user_location_permission_explanation">Location is needed for the map</string>
    <string name="notificationChannelDescription">Description xd</string>
    <string name="notificationChannelName">Step Counter</string>
    <string name="notificationStepsMessage">Daily Step Goal</string>
    <string name="distanceTitle">Distance</string>
    <string name="speedTitle">Speed</string>
    <string name="title_activity_history_item">HistoryItemActivity</string>
    <string name="todayTitle">Today</string>
    <string name="totalStepsTitle">Total Steps</string>
    <string name="totalDistanceTitle">Total Distance</string>
    <string name="averageSpeedTitle">Avg Speed</string>
    <string name="nameEditTitle">Name</string>
    <string name="stepEditTitle">Daily Goal</string>
    <string name="action_chronometer">Chronometer</string>
    <string name="progressbarSteps">Steps</string>
    <string name="progressbarGoal">Goal: </string>
    <string name="progressbarGoalNone">Goal: None</string>
    <string name="avgTimeTitle">Avg Time</string>
    <string name="enterStepGoal">"Please enter daily step goal"</string>
    <string name="enterName">"Please enter name"</string>
    <string name="nameSaved">"Username saved!"</string>
    <string name="dailyStepsSaved">"Daily step goal saved!"</string>
    <string name="navUserName">"Hello "</string>
    <string name="cardioText">Cardio</string>
    <string name="helperText">Helper</string>
    <string name="zeroSteps">0</string>


</resources>