<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.cardiohelper.ui.tracker.TrackerFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_tracker" />

    <fragment
        android:id="@+id/nav_graph"
        android:name="com.example.cardiohelper.ui.graph.GraphFragment"
        android:label="@string/menu_graph"
        tools:layout="@layout/fragment_graph" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.example.cardiohelper.ui.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />
</navigation>