<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/stepEditCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toTopOf="@+id/infoCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/stepProgressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:indeterminate="false"
                android:max="1000"
                android:progress="0"
                android:progressDrawable="@drawable/progress_bar"
                android:secondaryProgress="0"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/todayTitleTextView" />

            <TextView
                android:id="@+id/stepCountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="88dp"
                android:text="@string/zeroSteps"
                android:textAlignment="center"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="@+id/stepProgressBar"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="@+id/stepProgressBar"
                app:layout_constraintTop_toTopOf="@+id/stepProgressBar" />

            <TextView
                android:id="@+id/stepsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/progressbarSteps"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/stepProgressBar"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="@+id/stepProgressBar"
                app:layout_constraintTop_toBottomOf="@+id/stepCountTextView" />

            <TextView
                android:id="@+id/todayTitleTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/todayTitle"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/stepProgressBar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/stepGoalTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/progressbarGoal"
                android:textAlignment="center"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@+id/stepProgressBar"
                app:layout_constraintEnd_toEndOf="@+id/stepProgressBar"
                app:layout_constraintStart_toStartOf="@+id/stepProgressBar"
                app:layout_constraintTop_toBottomOf="@+id/stepsTextView"
                app:layout_constraintVertical_bias="0.062" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/infoCard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stepEditCard">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/totalStepsLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/distanceLayout"
                app:layout_constraintEnd_toStartOf="@+id/timeLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/totalStepsTitleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/totalStepsTitle"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/totalStepsTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/timeLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/speedLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/totalStepsLayout"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/timeTitleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/avgTimeTitle"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/timeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/distanceLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="32dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/speedLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/totalStepsLayout">

                <TextView
                    android:id="@+id/distanceTitleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/totalDistanceTitle"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/distanceTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/speedLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="32dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/distanceLayout"
                app:layout_constraintTop_toBottomOf="@+id/timeLayout">

                <TextView
                    android:id="@+id/speedTitleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/averageSpeedTitle"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/speedTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="20sp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
